--- a/MovieFinderApp/MovieFinderApp/Localizable.xcstrings
+++ b/MovieFinderApp/MovieFinderApp/Localizable.xcstrings
@@ -33,6 +33,9 @@
         }
       }
     },
+    "Hello, World!" : {
+
+    },
     "Home" : {
       "localizations" : {
         "en" : {
@@ -48,6 +51,19 @@
           }
         }
       }
+    },
+    "If you want to rate movies you need to log in" : {
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Если вы хотите оценивать фильмы необходимо авторизироваться"
+          }
+        }
+      }
+    },
+    "List" : {
+
     },
     "Load more" : {
       "localizations" : {
