Small fixes and dash of animations

--- a/MovieFinderApp/MovieFinderApp/Localizable.xcstrings
+++ b/MovieFinderApp/MovieFinderApp/Localizable.xcstrings
@@ -2,7 +2,14 @@
   "sourceLanguage" : "en",
   "strings" : {
     "%lld" : {
-
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld"
+          }
+        }
+      }
     },
     "About" : {
       "localizations" : {
@@ -26,6 +33,16 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Принять"
+          }
+        }
+      }
+    },
+    "Cancel" : {
+      "localizations" : {
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Отмена"
           }
         }
       }
